<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">322034334635854</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="label_username">Username</string>
    <string name="labelFirstName">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="label_gender">Gender</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_location">Location</string>
    <string name="button_share_with_dialog">Share with Share Dialog</string>
    <string name="button_share_with_view">Share with Custom View</string>
    <string name="title_activity_share_dialog">ShareDialogActivity</string>
    <string name="title_activity_share_view">ShareViewActivity</string>
    <string name="button_timeline">Timeline</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="button_post_update">Update Status</string>
    <string name="status_update_hint">Type here</string>
    <string name="title_activity_timeline2">Timeline2Activity</string>

</resources>
